--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/CGastrell/node-tile-cache/issues"
   },
-  "homepage": "https://github.com/CGastrell/node-tile-cache"
+  "homepage": "https://github.com/CGastrell/node-tile-cache",
+  "devDependencies": {
+    "node-static": "~0.7.3",
+    "restify": "~2.6.3"
+  }
 }
