--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/CGastrell/node-tile-cache",
   "devDependencies": {
     "node-static": "~0.7.3",
-    "restify": "~2.6.3"
+    "restify": "~2.6.3",
+    "jaws": "~0.12.1"
   }
 }
