preparando para heroku test

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "node-tile-cache",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "cache de tiles para mapas",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "index.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,8 @@
     "url": "https://github.com/CGastrell/node-tile-cache/issues"
   },
   "homepage": "https://github.com/CGastrell/node-tile-cache",
-  "devDependencies": {
+  "dependencies": {
     "jaws": "~0.12.1"
-  }
+  },
+  "engines" : { "node" : "0.10.x" } 
 }
