--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   },
   "homepage": "https://github.com/CGastrell/node-tile-cache",
   "dependencies": {
-    "jaws": "~0.12.1"
+    "bunyan": "^0.23.1",
+    "jaws": "~0.12.1",
+    "socket.io": "^1.0.4"
   },
-  "engines" : { "node" : "0.10.x" } 
+  "engines": {
+    "node": "0.10.x"
+  }
 }
