--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   },
   "homepage": "https://github.com/CGastrell/node-tile-cache",
   "dependencies": {
-    "bunyan": "^0.23.1",
     "jaws": "~0.12.1",
-    "socket.io": "^1.0.4"
+    "socket.io": "~1.0.6",
+    "bunyan": "~0.23.1"
   },
   "engines": {
     "node": "0.10.x"
